--- a/index.css
+++ b/index.css
@@ -1,64 +1,67 @@
-body{
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-    background-color: rgb(76, 172, 231);
-}
-
-#header{
-    background-color: white;
-    color: rgb(76, 172, 231);
-    padding: 20px;
+body {
+    background-color: rgb(61, 114, 199);
+  }
+  
+  #header {
     text-align: center;
-}
-
-#containerDiv{
+    font-size: 32px;
+    color: rgb(61, 114, 199);
     background-color: white;
-    width: 40%;
-    color: black;
+  }
+  
+  #containerDiv {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+  }
+  
+  #myInput {
     padding: 10px;
-    margin: auto;
-    border: 5px;
-}
+    border-radius: 5px;
+    border: none;
+    background-color: #f2f2f2;
+    width: 80%;
+    margin-right: 10px;
+    border-color: #bcd1e6;
+  }
 
-input{
-    padding: 10px;
-    border: 5px;
-    width: 70%;
-    border-color:rgb(76, 172, 231);
-    
-
-}
-
-#addButton{
-padding: 10px;
-background-color: rgb(48, 53, 202);
-color: white;
-width: 18%;
-margin-left: 6%;
-border-radius: 5px;
-}
-
-#listParent{
-    margin-top: 30px;
+  
+  
+  #addButton {
+    padding: 10px 26px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(61, 114, 199);
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  ul {
+    margin-top: 10%;
+    padding: 0;
     list-style: none;
-    list-style-position: none;
-    margin-left: 0%;
-    padding: 0%;
-    
-}
-
-li{
-    background-color: rgb(127, 204, 255);
-    color: black;
-    list-style: none;
-    width:96%;
+  }
+  
+  li {
+    background-color: #bcd1e6;
+    margin-bottom: 10px;
     padding: 10px;
-}
-
-.trash{
-    background-color: rgb(48, 53, 202);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  
+  li i {
     color: white;
-    margin-left: 88%;
+    cursor: pointer;
+    background-color: blue;
+    padding: 10px;
 
-}
+  }
+  
+  
